syntax = "proto3";

package post;

import "commons.proto";
import "google/protobuf/empty.proto";

message Post {
  string id = 1;
  string title = 2;
  string body = 3;
  bool published = 4;
  string author = 5;
}

message CreatePostInput {
  string title = 2;
  string body = 3;
  bool published = 4;
  string author = 5;
}

message UpdatePostInput {
  string id = 1;
  Post data = 2;
}

message PostList {
  repeated Post posts = 1;
}

service PostService {
  rpc findAll (Query) returns (PostList) {}
  rpc findOne (Query) returns (Post) {}
  rpc count (Query) returns (Count) {}
  rpc create (CreatePostInput) returns (Post) {}
  rpc update (UpdatePostInput) returns (Post) {}
  rpc destroy (Id) returns (google.protobuf.Empty) {}
}